Unify report create async contract
